improve basic calc

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My Calc</title>
+    <title>My Calculators</title>
     <meta name="description" content="A generic calculator PWA">
     <meta name="theme-color" content="#1a3c6e">
   </head>
